--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en"> // lang to sepcifie the language we are using 
+<html lang="en"> <!--lang to sepcifie the language we are using -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>igaming arcade</title>
+  <link rel="icon" type="image/x-icon" href="Designer.jpeg">
+  <link rel="stylesheet" href="index.css">
+  <script defer src="script.js"></script>
 </head>
-<body style="background-color: slateblue;">
-  
+<body>
+  <header>
+    <a href="index.html\">IGAMING</a>
+  </header>
+  <nav>
+    <a href="signup.html">reservation</a>
+    
+  </nav>
+
+
 </body>
 </html>
