--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation Form</title>
+    <link rel="icon" type="image/x-icon" href="Designer.jpeg">
     <link rel="stylesheet" href="signup.css">
     <!-- Add the link to your signup.css file -->
 
@@ -91,7 +92,8 @@
             <label for="reservation_date_and_time">Reservation Date and Time:</label>
             <input type="datetime-local" id="reservation_date_and_time" name="reservation_date_and_time" required>
             
-            <input type="submit" value="Make Reservation">
+           <!--- <input type="submit" value="Make Reservation"> --->
+           <a href="index.html"> alert make Reservation </a>
         </form>
     </div>
 </body>
