--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 <body>
   <header>
-    <a href="index.html\">IGAMING</a>
+    <a class="log" href="index.html" >IGAMING</a>
   </header>
   <nav>
-    <a href="signup.html">reservation</a>
+    <ul>
+    <li><a class="res" href="signup.html">reservation</a></li>
+    <li><a  href="signup.html"><img src="resrevartion.png" alt="logo" id="logo" ></a></li>
+
+    <li style="float: left;"><a class="home" href="index.html">IGAMING</a></li>
+    <li style="float: left;"><a class="offers" href="offers.html">Offers</a></li>
+    <li style="float: left;"><a class="support" href="support.html">support</a></li>
+    <li> <input class="search-container" type="text" placeholder="Search.." name="search"></li>
     
+    </ul>
   </nav>
 
 
