--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support</title>
-    <link rel="stylesheet" href="support.css">
+    <title>Contact</title>
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -22,8 +22,11 @@
         <li> <input class="search-container" type="text" placeholder="Search.." name="search"></li>
     </ul>
       </nav>
-    <h1>in the making ...</h1>
-    
+    <h1>in the making </h1>
+
+
+
+
 
 
 
