--- a/offers.html
+++ b/offers.html
@@ -13,7 +13,7 @@
         <a class="log" href="index.html" >IGAMING</a>
       </header>
       <nav>
-        <ul>
+        <ul class="navbar">
         <li><a class="res" href="signup.html">reservation</a></li>
         <li><a  href="signup.html"><img src="resrevartion.png" alt="logo" id="logo" ></a></li>
     
@@ -24,5 +24,44 @@
     </ul>
       </nav>
 <h1>in the making ... </h1>
+
+
+
+
+<footer class="footerbar">
+  <div class="footer_games">
+    <h3 class="writing"> Games</h3>
+    <a href="playstation.html" class="playstation">Playstation</a>
+    <br> <br>
+    <a href="xbox.html" class="xbox">Xbox</a>
+    <br> <br>
+     <a href="pc.html" class="pc">PC</a>
+      <br> <br>
+      <a href="sim.html" class="sim">SIM</a>
+      <br> <br>
+      <a href="othersgames.html" class="links">Other Games</a>
+      <br> <br>
+  </div>
+  <div class="footer_nh">
+    <h3 class="writing"> Need Help</h3>
+      <a href="contact.html" class="links">Contact Us</a>
+      <br> <br>
+      <a href="news.html" class="links">News</a>
+      <br> <br>
+      <a href="privacy.html" class="links">Privacy Policy</a>
+      <br> <br>
+      <a href="rules.html" class="links">Rules</a>
+
+  </div>
+  <div class="footer_hs">
+    <h3 class="writing"> Support Us</h3>
+    <p style="color: aliceblue;">Stay tuned for product news and updates.</p>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <br>
+    <a href="https://www.tiktok.com/@igamiiing?is_from_webapp=1&sender_device=pc" class="tiktok"><img src="tiktok1.png" alt="tiktok" class="tiktok"></a>
+    <a href="https://www.instagram.com/igamingdz/" class="insta"> <img src="instagram.jpeg" alt="instagram" class="insta"> </a>
+  </div>
+</footer>
 </body>
 </html>
