--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <li><a  href="signup.html"><img src="resrevartion.png" alt="logo" id="logo" ></a></li>
 
     <li style="float: left;"><a class="home" href="index.html">IGAMING</a></li>
-    <li style="float: left;"><a class="offers" href="offers.html">Offers</a></li>
-    <li style="float: left;"><a class="support" href="support.html">support</a></li>
+    <li style="float: left;"><a  class="offers" href="offers.html" id="offercon" >Offers</a></li>
+    <li style="float: left;"><a class="support" href="support.html" id="supcon">support</a></li>
     <li> <input class="search-container" type="text" placeholder="Search.." name="search"></li>
     
     </ul>
   </nav>
-
+<div class="container">
   <section class="slider">
     <div class="slide_wrapper">
     <div class="slide">
-      <img id="slide1" src="https://images.unsplash.com/photo-1672814519670-16eedb80ac83?q=80&w=2832&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 1 of playstation ">
+      <img id="slide1" src="https://images.unsplash.com/photo-1672814519670-16eedb80ac83?q=80&w=2832&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 1 of playstation "  >
       <img id="slide2" src="https://images.unsplash.com/photo-1661348027228-e7f05cd5a254?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 2 of xbox ">
       <img id="slide3" src="https://images.unsplash.com/photo-1603481588273-2f908a9a7a1b?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 3 of pc">
       <img id="slide4" src="https://images.unsplash.com/photo-1683813479751-61c58cd6df5b?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 4 of sim ">
@@ -43,10 +43,10 @@
        </div>
     </div>
   </section>
-
+<h1 class="offr" >OFFERS</h1>
   <div class="options" >
     <div class="multiplayer">
-      <h3 class="mp" >Multiplayer</h3>
+      <h3 class="mp" >Multiplayer Games</h3>
     
     </div>
     <div class="story">
@@ -63,7 +63,7 @@
     </div>
   </div>
 
-  <footer class="footerbar">
+  <footer >
     <div class="footer_games">
       <h3 class="writing"> Games</h3>
       <a href="playstation.html" class="playstation">Playstation</a>
@@ -98,5 +98,6 @@
       <a href="https://www.instagram.com/igamingdz/" class="insta"> <img src="instagram.jpeg" alt="instagram" class="insta"> </a>
     </div>
   </footer>
+</div>
 </body>
 </html>
