--- a/playstation.html
+++ b/playstation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="contact.css">
+    <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <header>
